<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HumidWeather</string>

    <string name="main_toolbar_menu_addplace_title">Add place</string>
    <string name="main_toolbar_menu_deleteplace_title">Delete place</string>
    <string name="main_toolbar_menu_setting_title">Setting</string>

    <string name="setting_toolbar_title">Setting</string>

    <string name="setting_basis_title">Basis</string>

    <string name="setting_temperature_unit_title">Temperature Unit</string>
    <string-array name="setting_temperature_unit_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string name="setting_daily_step_title">Daily step</string>

    <string name="setting_about_title">About</string>

    <string name="setting_version_title">Version</string>

    <string name="addplace_searchbar_hint">Please enter a place…</string>
    <string name="addplace_bg_desc">Background image</string>

    <string name="forecast_title">Forecast for the next %d days</string>

    <string name="lifeindex_title">Life Index</string>
    <string name="lifeindex_coldrisk_title">Cold Risk</string>
    <string name="lifeindex_coldrisk_desc">Cold risk icon</string>

    <string name="lifeindex_dressing_title">Dressing</string>
    <string name="lifeindex_dressing_desc">Dressing icon</string>

    <string name="lifeindex_ultraviolet_title">Ultraviolet</string>
    <string name="lifeindex_ultraviolet_desc">Ultraviolet icon</string>

    <string name="lifeindex_carwashing_title">Car washing</string>
    <string name="lifeindex_carwashing_desc">Car washing icon</string>

    <string name="item_forecast_skyicon_desc">Weather icon</string>
    <string name="item_hourly_date_pattern">a h</string>

    <string name="sky_clear_info">Clear</string>
    <string name="sky_partly_cloudy_info">Partly cloudy</string>
    <string name="sky_cloudy_info">Cloudy</string>
    <string name="sky_wind_info">Wind</string>
    <string name="sky_light_rain_info">Light rain</string>
    <string name="sky_moderate_rain_info">Moderate rain</string>
    <string name="sky_heavy_rain_info">Heavy rain</string>
    <string name="sky_storm_rain_info">Storm rain</string>
    <string name="sky_thunder_shower_info">Thunder shower</string>
    <string name="sky_sleet_info">Sleet</string>
    <string name="sky_light_snow_info">Light snow</string>
    <string name="sky_moderate_snow_info">Moderate snow</string>
    <string name="sky_heavy_snow_info">Heavy snow</string>
    <string name="sky_storm_snow_info">Storm snow</string>
    <string name="sky_hail_info">Hail</string>
    <string name="sky_light_haze_info">Light haze</string>
    <string name="sky_moderate_haze_info">Moderate haze</string>
    <string name="sky_heavy_haze_info">Heavy haze</string>
    <string name="sky_fog_info">Fog</string>
    <string name="sky_dust_info">Dust</string>

    <string name="snack_no_place">Unable to search for relevant places</string>
    <string name="snack_no_weather">Unable to get weather information</string>
    <string name="snack_empty_data">Data is empty</string>

</resources>