<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_place"
        android:icon="@drawable/ic_add_black"
        android:title="@string/main_toolbar_menu_addplace_title"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/delete_place"
        android:icon="@drawable/ic_delete_black"
        android:title="@string/main_toolbar_menu_deleteplace_title"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting_rounded_black"
        android:title="@string/main_toolbar_menu_setting_title"
        app:showAsAction="collapseActionView" />

</menu>